public/css/main.css
/* ... */
  .classes-container .add-class-button-container {
    display: block;
    margin-bottom: 40px; }
  .classes-container button {
    background-color: #26C6DA;
    display: inline-block;
    float: right; }

.class-div {
  background-color: #E0F7FA;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: inline-block;
  margin: 40px;
  padding: 50px 100px; }

.class-div:hover {
  cursor: pointer;
  -webkit-transform: scale(1.05);
  -moz-transform: scale(1.05);
  -ms-transform: scale(1.05);
  -o-transform: scale(1.05);
  transform: scale(1.05); }

.overlay {
  background: rgba(0, 0, 0, 0.3);
  bottom: 0;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%; }

.add-class-lightbox {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: none;
  height: 200px;
  left: 30%;
  margin: 0 auto;
  padding: 20px;
  position: absolute;
  right: 30%;
  top: 40%;
  width: 500px; }
  .add-class-lightbox img {
    cursor: pointer;
    float: right;
    height: 30px;
    width: 30px; }
  .add-class-lightbox form {
    font-size: 18px;
    padding: 40px;
    text-align: center; }
    .add-class-lightbox form p, .add-class-lightbox form input[type="text"] {
      display: inline-block;
      font-size: 18px;
      padding: 5px; }
    .add-class-lightbox form input[type="submit"] {
      background-color: #26C6DA;
      display: block;
      margin: 15px auto 0 auto; }

@media (max-width: 900px) {
  .class-div {
    margin: 20px; } }
.student-list {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  font-size: 18px;
  margin: 20px auto;
  padding: 40px; }
  .student-list button {
    background-color: #26C6DA;
    float: right; }
  .student-list table {
    border-collapse: collapse;
    border-spacing: 10px;
    margin-top: 50px; }
  .student-list th, .student-list td {
    padding: 10px; }

.student-icon {
  height: 30px;
  width: 30px; }

.add-student-lightbox {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  display: none;
  height: 320px;
  left: 30%;
  margin: 0 auto;
  padding: 20px;
  position: absolute;
  right: 30%;
  top: 40%;
  width: 500px; }
  .add-student-lightbox img {
    cursor: pointer;
    float: right;
    height: 30px;
    width: 30px; }
  .add-student-lightbox form {
    font-size: 18px;
    padding: 40px;
    text-align: center; }
    .add-student-lightbox form p, .add-student-lightbox form input[type="text"], .add-student-lightbox form input[type="password"] {
      display: inline-block;
      font-size: 18px;
      margin: 5px;
      padding: 5px; }
    .add-student-lightbox form input[type="submit"] {
      background-color: #26C6DA;
      display: block;
      margin: 15px auto 0 auto; }

.dashboard-container {
  background-color: white;
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  margin: 20px auto;
  padding: 20px; }

.dashboard-assignment {
  -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
  margin: 20px;
  min-height: 300px; }
  .dashboard-assignment .assignment-icon {
    display: none;
    height: 25px;
    padding-right: 10px;
    width: 25px; }
  .dashboard-assignment .dashboard-image {
    background-color: white;
    -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    display: inline-block;
    float: left;
    margin: 30px 20px 10px 30px;
    padding: 10px; }
  .dashboard-assignment img {
    height: 200px;
    object-fit: cover;
    object-position: center;
    width: 200px; }
  .dashboard-assignment h2 {
    display: block;
    padding: 35px 30px 10px 0;
    text-align: left; }
  .dashboard-assignment p {
    font-size: 16px;
    line-height: 1.5;
    padding: 10px 30px 10px 20px; }
  .dashboard-assignment .tag {
    background-color: #00BCD4;
    -webkit-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    -ms-box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.25);
    display: inline-block;
    letter-spacing: 2px;
    margin: 10px 0 30px 20px;
    padding: 8px 17px; }

.dashboard-assignment:hover {
  -webkit-transform: scale(1.01);
  -moz-transform: scale(1.01);
  -ms-transform: scale(1.01);
  -o-transform: scale(1.01);
  transform: scale(1.01); }
/* ... */

